--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,10 +5,10 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Thimar Course</string>
+	<string>Thimar</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
+    <key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
@@ -18,6 +18,12 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+   	<string>to update user image</string>
+   	<key>NSCameraUsageDescription</key>
+   	<string>to update user image</string>
+   	<key>NSMicrophoneUsageDescription</key>
+   	<string>to update user image</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
