--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  pin_code_fields: ^8.0.1
+  circular_countdown_timer: ^0.2.3
+  shared_preferences: ^2.2.0
+  dio: ^5.3.2
+  flutter_html: ^3.0.0-alpha.5
+  flutter_bloc: ^8.1.3
+  flutter_screenutil: ^5.9.0
+  image_picker: ^1.0.2
+  firebase_auth: ^4.8.0
+  firebase_messaging: ^14.6.7
+  firebase_core: ^2.15.1
+  firebase_analytics: ^10.4.5
+  google_maps_flutter: ^2.2.7
+  geolocator: ^10.0.0
+  geocoding: ^2.1.0
+  video_player: ^2.6.1
+  audioplayers: ^4.0.1
+#  file_picker: ^5.3.1
+  carousel_slider: ^4.2.1
+  easy_localization: ^3.0.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +83,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+#    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,10 +97,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Tajawal
+      fonts:
+       - asset: assets/fonts/Tajawal-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
