--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   carousel_slider: ^4.2.1
   easy_localization: ^3.0.3
   intl: ^0.18.1
+  kiwi: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +84,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-#    - assets/translations/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
