--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,7 +84,6 @@ flutter {
 }
 
 dependencies {
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-//    implementation 'com.google.android.material:material:<version>'
-    implementation "com.google.firebase:firebase-analytics:21.3.0"
+//    implementation 'com.google.android.material:material:1.11.0-beta01'
+    implementation "com.google.firebase:firebase-analytics:21.4.0"
 }
